# ett-summary

./: .gitignore  Makefile  README.md
client/: Cargo.toml
client/src/: main.rs
contrib/systemd/: summary-client.service  summary-server.service
server-rs/: Cargo.toml  Dockerfile  README.md  config.toml
server-rs/src/: main.rs
