[package]
name = "client_app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "multipart"] }
hound = "3.5.1"                                                      # Ensure this is the correct version for your needs
cpal = { version = "0.15.3", default-features = false }
clap = { version = "4.5.20", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }

[features]
default = []
jack = ["cpal/jack"]

[dev-dependencies]
tempfile = "3.13.0"
